script name was changed

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ package_dir=
     =src
 packages=find:
 scripts =
-    src/scripts/gf_run.py
+    src/scripts/gnnff_run.py
 install_requires =
     torch>=1.7
     numpy
