change module name

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = gnnff
-version = attr: gnnffpack.__version__.__version__
+version = attr: gnnff.__version__.__version__
 author = Kento Nishio
 author_email = ken2403.pmtdg@gmail.com
 description = GNNFF - Accurate and scalable graph neural network force field.
