--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = gnnff
 version = attr: gnnff.__version__.__version__
 author = Kento Nishio
 author_email = ken2403.pmtdg@gmail.com
-description = GNNFF - Accurate and scalable graph neural network force field.
+description = Atomistic Force Fields based on GNNFF (Accurate and scalable graph neural network force field)
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/ken2403/gnnff
